--- a/src/components/05-components/SapphireCare_Patterns/_index.scss
+++ b/src/components/05-components/SapphireCare_Patterns/_index.scss
@@ -17,6 +17,8 @@
 @forward 'dosage-info';
 @forward 'exam-results/';
 @forward 'filter';
+@forward 'form-fieldset/';
+@forward 'form-input/';
 @forward 'full-page-feedback';
 @forward 'generic-card';
 @forward 'icon-plus';
