--- a/src/components/98-adjustments/_profile.scss
+++ b/src/components/98-adjustments/_profile.scss
@@ -1,6 +1,64 @@
 @use '~Settings/colors'as *;
 @use '~Settings/fonts'as *;
 
+[id*='Profile'] {
+
+  [id*="MandatoryLabel"] {
+    display: flex;
+    margin-bottom: 10px;
+
+    .form-input__asterisk {
+      color: $regular-red;
+      margin-right: 5px;
+    }
+  }
+
+  [id*='Address'] {
+
+    [id*='BuildingInfo'],
+    [id*='FloorInfo'] {
+      display: flex;
+
+      >div {
+        flex: 1;
+      }
+
+      [id*='BlockINumber'],
+      [id*='Floor'] {
+        margin-right: 20px;
+      }
+    }
+
+  }
+
+  [id*='NotificationPreferences'] {
+    .form-fieldSet__content {
+
+      >div {
+        border-bottom: 1px solid $light-grey;
+        display: flex;
+        margin-bottom: 20px;
+      }
+    }
+
+    [id*='Checkbox'] {
+      flex: 1;
+
+      .form-input__input {
+        align-items: center;
+        display: flex;
+      }
+
+    }
+  }
+
+  [id*="SaveButton"] {
+    padding-bottom: 20px;
+  }
+
+
+}
+
 [id*='ProfileHeader'] {
 
   .card-profile {
