--- a/src/components/02-generic/_reset.scss
+++ b/src/components/02-generic/_reset.scss
@@ -7,6 +7,7 @@ body,
   color: $dark-grey;
   font-family: $latin-regular;
   font-size: 14px !important;
+  margin: 0 !important;
   -webkit-tap-highlight-color: transparent;
   -webkit-touch-callout: none;
   -webkit-user-select: none;
