Card Wirzard and doctor list separator

--- a/src/components/98-adjustments/_index.scss
+++ b/src/components/98-adjustments/_index.scss
@@ -4,6 +4,7 @@
 @forward 'appointment-detail';
 @forward 'detail-pages';
 @forward 'doctor-detail';
+@forward 'doctor-list';
 @forward 'exam-detail';
 @forward 'exam-list';
 @forward 'home-page';
