--- a/src/components/05-components/SapphireCare_Patterns/card-wizard/_index.scss
+++ b/src/components/05-components/SapphireCare_Patterns/card-wizard/_index.scss
@@ -9,7 +9,6 @@
   box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.1);
   color: $regular-alpha;
   display: flex;
-  font-family: $latin-bold;
   font-size: $font-size-heading3;
   height: 70px;
   justify-content: space-between;
@@ -35,15 +34,24 @@
       background: linear-gradient(166deg, rgba(0, 43, 73, 0) 0%, rgba(0, 43, 0, 0.77) 100%, rgba(0, 43, 0, 0.8) 100%);
       color: $sapphire-white;
       display: flex;
+      flex-direction: column;
       height: 100%;
+      justify-content: center;
       padding-right: 40px;
       width: 100%;
       z-index: 1;
 
       >span {
+        font-family: $latin-bold;
+
         padding-left: 15px;
+        width: 100%;
       }
 
+      :nth-child(2) {
+        font-family: $latin-regular;
+        font-size: 1rem;
+      }
     }
 
     .cardWizard__link {
