language selector and appointment card height

--- a/src/components/05-components/SapphireCare_Patterns/_index.scss
+++ b/src/components/05-components/SapphireCare_Patterns/_index.scss
@@ -16,6 +16,7 @@
 @forward 'detail-page-header/';
 @forward 'dosage-info';
 @forward 'exam-results/';
+@forward 'language-selector/';
 @forward 'filter';
 @forward 'form-fieldset/';
 @forward 'form-input/';
