--- a/src/components/98-adjustments/_index.scss
+++ b/src/components/98-adjustments/_index.scss
@@ -14,5 +14,6 @@
 @forward 'menu';
 @forward 'news-details';
 @forward 'news-list';
+@forward 'preferences';
 @forward 'prescription-detail';
 @forward 'profile';
