--- a/src/components/01-tools/_index.scss
+++ b/src/components/01-tools/_index.scss
@@ -1,3 +1,4 @@
+@forward 'arrow-left-arabic.scss';
 @forward 'background-gradient';
 @forward 'card-profile-image';
 @forward 'information-section';
