--- a/src/components/01-tools/_information-section.scss
+++ b/src/components/01-tools/_information-section.scss
@@ -14,6 +14,10 @@
       font-family: $latin-bold;
       font-size: $font-size-heading2;
       margin-bottom: 13px;
+
+      .is-rtl & {
+        font-family: $arabic-bold;
+      }
     }
 
     .title {
