--- a/src/components/05-components/SapphireCare_Patterns/dosage-info/_index.scss
+++ b/src/components/05-components/SapphireCare_Patterns/dosage-info/_index.scss
@@ -21,8 +21,12 @@
 
 
     & :nth-child(2) {
-      font-family: 'LatoBold';
+      font-family: $latin-bold;
       text-align: right;
+
+      .is-rtl & {
+        font-family: $arabic-bold;
+      }
     }
 
     >div {
