--- a/src/components/05-components/SapphireCare_Patterns/salute/_index.scss
+++ b/src/components/05-components/SapphireCare_Patterns/salute/_index.scss
@@ -4,10 +4,18 @@
   .salute__hello {
     font-family: $latin-regular;
     font-size: $font-size-heading2;
+
+    .is-rtl & {
+      font-family: $arabic-regular;
+    }
   }
 
   .salute__patient-name {
     font-family: $latin-bold;
     font-size: $font-size-big;
+
+    .is-rtl & {
+      font-family: $arabic-bold;
+    }
   }
 }
