--- a/src/components/05-components/Silk_Blocks/section/_index.scss
+++ b/src/components/05-components/Silk_Blocks/section/_index.scss
@@ -52,6 +52,10 @@
     font-size: $font-size-heading3;
     padding: 0;
 
+    .is-rtl & {
+      font-family: $arabic-bold;
+    }
+
   }
 
   .section-content {
