--- a/src/components/98-adjustments/_appointment-request.scss
+++ b/src/components/98-adjustments/_appointment-request.scss
@@ -59,6 +59,10 @@ $height:100px;
       .section-title {
         font-family: $latin-bold;
         font-size: $font-size-heading2;
+
+        .is-rtl & {
+          font-family: $arabic-bold;
+        }
       }
     }
   }
