--- a/src/components/98-adjustments/_doctor-detail.scss
+++ b/src/components/98-adjustments/_doctor-detail.scss
@@ -40,6 +40,10 @@
         color: $dark-grey;
         font-family: $latin-bold;
 
+        .is-rtl & {
+          font-family: $arabic-bold;
+        }
+
       }
     }
 
