--- a/src/components/98-adjustments/_hospital-detail.scss
+++ b/src/components/98-adjustments/_hospital-detail.scss
@@ -19,6 +19,10 @@
         font-family: $latin-regular;
         font-size: $font-size-normal;
         margin-bottom: 40px;
+
+        .is-rtl & {
+          font-family: $arabic-regular;
+        }
       }
     }
 
