--- a/src/components/02-generic/_reset.scss
+++ b/src/components/02-generic/_reset.scss
@@ -14,4 +14,8 @@ body,
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+
+  .is-rtl & {
+    font-family: $arabic-regular;
+  }
 }
