--- a/src/components/05-components/SapphireCare_Patterns/card-two-cols-big/_index.scss
+++ b/src/components/05-components/SapphireCare_Patterns/card-two-cols-big/_index.scss
@@ -21,6 +21,10 @@
   text-align: center;
   vertical-align: middle;
   width: 50%;
+
+  .is-rtl & {
+    font-family: $arabic-bold;
+  }
 }
 
 .card-two-cols-big-left.separator-border:after {
