--- a/src/components/05-components/SapphireCare_Patterns/no-appointments-card/_index.scss
+++ b/src/components/05-components/SapphireCare_Patterns/no-appointments-card/_index.scss
@@ -22,6 +22,10 @@
     justify-content: center;
     width: 100%;
 
+    .is-rtl & {
+      font-family: $arabic-bold;
+    }
+
     .btn {
       align-items: center;
       border-radius: 24px;
