--- a/src/components/98-adjustments/_appointments-list.scss
+++ b/src/components/98-adjustments/_appointments-list.scss
@@ -5,6 +5,10 @@
     .section-title {
       font-family: $latin-bold;
       font-size: $font-size-heading2;
+
+      .is-rtl & {
+        font-family: $arabic-bold;
+      }
     }
 
     .section {
