--- a/src/components/98-adjustments/_home-page.scss
+++ b/src/components/98-adjustments/_home-page.scss
@@ -45,9 +45,17 @@ $marginContainers: 15px;
     top: 20px;
   }
 
-  .carousel-container {
-    width: 90%;
+  .carousel {
+    .carousel-container {
+      width: 90%;
+    }
+
+    .is-rtl & {
+      direction: rtl;
+    }
   }
+
+
 
   [id*='SaluteSection'] {
     .section {
@@ -69,6 +77,10 @@ $marginContainers: 15px;
       margin: 0 10px 0 0;
       white-space: normal;
       width: 100%;
+
+      .is-rtl & {
+        margin: 0 0 0 10px;
+      }
     }
   }
 
@@ -99,10 +111,20 @@ $marginContainers: 15px;
 
         &:first-of-type {
           margin-right: $marginContainers;
+
+          .is-rtl & {
+            margin-left: $marginContainers;
+            margin-right: unset;
+          }
         }
 
         &:last-of-type {
           margin-left: $marginContainers;
+
+          .is-rtl & {
+            margin-left: unset;
+            margin-right: $marginContainers;
+          }
         }
       }
     }
@@ -149,6 +171,10 @@ $marginContainers: 15px;
         .NewsCounter {
           color: $regular-alpha;
           font-family: $latin-bold;
+
+          .is-rtl & {
+            font-family: $arabic-bold;
+          }
         }
       }
     }
