--- a/src/components/98-adjustments/_news-details.scss
+++ b/src/components/98-adjustments/_news-details.scss
@@ -34,6 +34,10 @@
         font-size: $font-size-heading1;
         margin-bottom: 25px;
 
+        .is-rtl & {
+          font-family: $arabic-bold;
+        }
+
       }
     }
   }
