--- a/src/components/98-adjustments/_prescription-detail.scss
+++ b/src/components/98-adjustments/_prescription-detail.scss
@@ -16,6 +16,10 @@
     [id*='Date'] {
       font-family: $latin-regular;
       font-size: 1rem;
+
+      .is-rtl & {
+        font-family: $arabic-regular;
+      }
     }
 
 
@@ -35,8 +39,16 @@
           color: $sapphire-white;
           font-family: $latin-regular;
 
+          .is-rtl & {
+            font-family: $arabic-regular;
+          }
+
           &.active {
             font-family: $latin-bold;
+
+            .is-rtl & {
+              font-family: $arabic-bold;
+            }
           }
         }
       }
@@ -48,10 +60,20 @@
 
         &:first-child {
           margin-left: 0;
+
+          .is-rtl & {
+            margin-left: 7px;
+            margin-right: 0;
+          }
         }
 
         &:last-child {
           margin-right: 0;
+
+          .is-rtl & {
+            margin-left: 0;
+            margin-right: 7px;
+          }
         }
       }
 
@@ -64,6 +86,10 @@
         left: -5px;
         margin: 0;
         position: relative;
+
+        .is-rtl & {
+          right: -5px;
+        }
       }
     }
 
