--- a/src/components/04-base/_buttons.scss
+++ b/src/components/04-base/_buttons.scss
@@ -19,6 +19,10 @@
   line-height: 20px;
   min-height: 50px;
 
+  .bottom & {
+    border-radius: 24px;
+  }
+
   .is-rtl & {
     font-family: $arabic-bold;
   }
