--- a/src/components/05-components/Silk_Blocks/wizard/_index.scss
+++ b/src/components/05-components/Silk_Blocks/wizard/_index.scss
@@ -2,35 +2,63 @@
 
 @use '~Settings/colors'as *;
 
-.wizard-item-wrapper.active .wizard-label {
-  color: $regular-alpha;
-  /*primary-color*/
+
+.wizard {
+  left: 0;
+  position: fixed;
+  top: 100px;
+  width: 100%;
+  z-index: 1;
+
+  .wizard-item-wrapper {
+
+    &.active,
+    &.past {
+      .wizard-item {
+        background-color: $regular-alpha;
+      }
+    }
+
+    &.active {
+      .wizard-label {
+        color: $regular-alpha;
+        /*primary-color*/
+      }
+    }
+
+
+
+    .wizard-item {
+      background-color: $light-grey;
+      height: 6px;
+      width: 100%;
+    }
+
+  }
+
+
 }
 
-.wizard-item-wrapper .wizard-item {
-  border-radius: 0;
-  height: 10px;
-  width: calc(100% - 1px);
-}
 
-.wizard-item-wrapper.past .wizard-item {
-  background-color: $regular-grey;
-  opacity: 1;
-}
 
-.wizard-item-wrapper.active .wizard-item {
-  background-color: $regular-alpha;
-  /*primary-color*/
-}
+// .wizard-item-wrapper .wizard-item-wrapper.past .wizard-item {
+//   background-color: $regular-grey;
+//   opacity: 1;
+// }
 
-.wizard-item-wrapper:before {
-  display: none;
-}
+// .wizard-item-wrapper.active .wizard-item {
+//   background-color: $regular-alpha;
+//   /*primary-color*/
+// }
 
-.wizard-item-wrapper.past .wizard-label {
-  color: $regular-grey;
-}
+// .wizard-item-wrapper:before {
+//   display: none;
+// }
 
-.wizard-item-wrapper .wizard-label {
-  font-size: 12px;
-}
+// .wizard-item-wrapper.past .wizard-label {
+//   color: $regular-grey;
+// }
+
+// .wizard-item-wrapper .wizard-label {
+//   font-size: 12px;
+// }
