Image flickring and hospital details adjusts

--- a/src/components/98-adjustments/_home-page.scss
+++ b/src/components/98-adjustments/_home-page.scss
@@ -6,11 +6,11 @@ $marginContainers: 15px;
 [id*='BgImageContainer'] {
 
   background-color: $sapphire-white;
-
-
   height: 100%;
+  overflow: hidden;
   position: absolute;
   top: 0;
+  white-space: nowrap;
   width: 100%;
 
   img[id*='ImageBgWhite'],
