--- a/src/components/98-adjustments/_index.scss
+++ b/src/components/98-adjustments/_index.scss
@@ -15,6 +15,8 @@
 @forward 'menu';
 @forward 'news-details';
 @forward 'news-list';
+@forward 'notfications-list';
+@forward 'notification-details';
 @forward 'preferences';
 @forward 'prescription-detail';
 @forward 'profile';
