Prescriptions squares background adjust

--- a/src/components/00-settings/_colors.scss
+++ b/src/components/00-settings/_colors.scss
@@ -150,7 +150,7 @@ $regular-red: #ff3e2d;
 $sapphire-background: #f3f3f3;
 $sapphire-blue: #2a5a6e;
 $sapphire-blue2: #00bfa5;
-$sapphire-care-blue1:#0D456D;
+$sapphire-care-blue1:#0e4f7c;
 $sapphire-care-blue2:#105C90;
 $sapphire-care-blue3:#002B49;
 $sapphire-care-red:#FA5252;
