--- a/src/components/98-adjustments/_prescription-detail.scss
+++ b/src/components/98-adjustments/_prescription-detail.scss
@@ -29,6 +29,7 @@
   [id*='PrescriptionSquares'] {
 
     .section {
+      background-color: $sapphire-care-blue1;
       padding-bottom: 30px;
       padding-top: 20px;
 
