--- a/src/components/05-components/SapphireCare_Patterns/_index.scss
+++ b/src/components/05-components/SapphireCare_Patterns/_index.scss
@@ -12,6 +12,7 @@
 @forward 'card-two-cols-big';
 @forward 'card-with-icon-on-top';
 @forward 'card-wizard/';
+@forward 'check-in-available';
 @forward 'custom-tabs';
 @forward 'detail-page-header/';
 @forward 'dosage-info';
