--- a/src/components/05-components/screens/splash/_index.scss
+++ b/src/components/05-components/screens/splash/_index.scss
@@ -2,43 +2,48 @@
 @use '~Settings/colors'as *;
 
 .splash-screen {
-  background-color: $sapphire-care-blue3;
-  /*secondary-color*/
-  -webkit-box-pack: space-evenly;
-  -ms-flex-pack: space-evenly;
-  justify-content: space-evenly;
+  background-color: $regular-beta;
+
+  .splash-bg-image {
+
+    img {
+      height: auto;
+      width: 100%;
+    }
+  }
+
+  .splash-loading {
+    bottom: 30%;
+    color: $regular-beta;
+    position: absolute;
+
+    .loading {
+
+      margin-top: 20px;
+
+      .OSLoaderContainer {
+        .OSLoadingBar {
+          background-color: $regular-alpha;
+        }
+      }
+    }
+  }
 }
 
-.splash-loading {
-  max-width: 72vw;
-  z-index: 1;
-}
 
-.splash-logo {
-  align-items: center;
-  -webkit-box-align: center;
-  -webkit-box-pack: center;
-  display: -webkit-box;
-  display: flex;
-  height: 100px;
-  justify-content: center;
-  position: relative;
-}
 
-.splash-powerd-by {
-  position: relative;
-  z-index: 1;
-}
+// .splash-logo {
+//   align-items: center;
+//   -webkit-box-align: center;
+//   -webkit-box-pack: center;
+//   display: -webkit-box;
+//   display: flex;
+//   height: 100px;
+//   justify-content: center;
+//   position: relative;
+// }
 
-.splash-bg-image {
-  bottom: -1vh;
-  position: fixed;
-  width: 100%;
-  z-index: 0;
-}
-
-.splash-bg-image img {
-  height: auto;
-  position: relative;
-  width: 100%;
-}
+// .splash-powerd-by {
+//   position: relative;
+//   z-index: 1;
+// }
