--- a/src/components/98-adjustments/_index.scss
+++ b/src/components/98-adjustments/_index.scss
@@ -11,6 +11,7 @@
 @forward 'home-page';
 @forward 'hospital-detail';
 @forward 'hospital-list';
+@forward 'layout-blank';
 @forward 'medication-list';
 @forward 'menu';
 @forward 'news-details';
