--- a/src/components/05-components/screens/login/_index.scss
+++ b/src/components/05-components/screens/login/_index.scss
@@ -2,148 +2,127 @@
 
 
 @use '~Settings/colors'as *;
+@use '~Settings/fonts'as *;
 
 .login-screen {
-  background-color: $sapphire-care-blue3;
+  align-items: center;
+  all: unset;
+  background-color: $regular-alpha;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: center;
   /*secondary-color*/
   overflow: hidden;
-}
 
-.login-screen .login-logo {
-  align-items: center;
-  -webkit-box-align: center;
-  -webkit-box-flex: 0.3;
-  -webkit-box-pack: center;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex: 0.3;
-  flex: 0.3;
-  -ms-flex-align: center;
-  -ms-flex-pack: center;
-  height: 200px;
-  justify-content: center;
-}
 
-.login-screen a,
-.login-screen a:visited,
-.login-screen a:link {
-  color: $sapphire-white;
-  font-weight: 500;
-}
+  .section-content {
+    margin-bottom: 160px;
+  }
 
-.login-form {
-  max-width: initial;
-  overflow: scroll;
-  padding: 0px 30px 30px 30px;
-  width: 100%;
-}
+  &__background_S {
+    position: absolute;
+    top: 0;
+    width: 100%;
 
-.login-screen input[data-input],
-.login-screen input[data-input]:focus,
-.login-screen input[data-input]:empty,
-.login-screen .animated-label-input input[data-input],
-.login-screen .animated-label-input input[data-input]:empty {
-  border-bottom: 1px solid $regular-alpha;
-  /*primary-color*/
-  color: $sapphire-white;
-  font-size: 16px;
-}
+    img {
+      height: auto;
+      width: 100%;
+    }
+  }
 
-.login-screen .animated-label-text {
-  color: $sapphire-white;
-  font-size: 16px;
-  top: 18px;
-}
+  .login-screen__container {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    margin: 0 35px;
+    z-index: 1;
 
-.login-screen .animated-label.active .animated-label-text {
-  top: 2px;
-}
+    .login {
+      &-logo {
+        margin-bottom: 20px;
+        width: 110px;
+      }
 
-.login-screen .animated-label-input .show-password {
-  color: $regular-alpha;
-  /*primary-color*/
-}
+    }
 
-.login-actions {
-  margin-top: 20px;
-  text-align: center;
-}
+    .form-fieldSet {
+      margin: 0;
 
-.login-actions a {
-  display: block;
-  font-size: 14px;
-  margin-top: 30px;
-  text-align: center;
-}
 
-.login-actions a:last-child {
-  padding-bottom: 30px;
-}
+      .form-fieldSet__content {
+        color: $sapphire-white;
+      }
+    }
 
-.login-actions-big {
-  color: $regular-alpha;
-  /*primary-color*/
-  font-size: 16px;
-  line-height: 24px;
-}
 
-.login-actions-big .sc {
-  display: inline-block;
-  font-size: 40px;
-  margin-right: 4px;
-  top: -6px;
-}
+    .animated-label {
+      .animated-label-text {
+        bottom: -30px;
+        font-size: $font-size-heading3;
+        position: relative;
+        transition: font-size .5s ease;
+      }
 
-.login-actions-big .icon {
-  font-size: 24px;
-  margin-right: 1px;
-}
+      &.active {
+        .animated-label-text {
+          bottom: 0;
+          font-size: $font-size-normal;
+        }
 
-.login-button {
-  color: $sapphire-care-blue3;
-  font-size: 12px;
-  padding-bottom: 14px;
-  position: relative;
-  text-align: center;
-}
 
-.login-button:before {
-  background-color: $sapphire-white;
-  border-radius: 100%;
-  content: "";
-  display: block;
-  height: 350%;
-  left: 50%;
-  position: absolute;
-  top: -105%;
-  -webkit-transform: translateX(-50%);
-  transform: translateX(-50%);
-  width: 110%;
-  z-index: 0;
-}
+      }
+    }
 
-.login-button>div {
-  margin-top: -15px;
-  position: relative;
-}
 
-.login-button a,
-.login-button a:visited,
-.login-button a:link {
-  color: $regular-alpha;
-  /*primary-color*/
-  display: block;
-  margin: 2px auto 0;
-}
+    input[data-input],
+    input[data-input]:focus,
+    input[data-input]:empty,
+    .animated-label-input input[data-input],
+    .animated-label-input input[data-input]:empty {
+      /*primary-color*/
+      border-bottom: 1px solid $sapphire-white;
+      color: $sapphire-white;
+      font-size: $font-size-heading2;
+      padding: 0;
+    }
+  }
 
-.user-info-login a,
-.user-info-login a:link,
-.user-info-login a:visited,
-.user-info-logout a,
-.user-info-logout a:link,
-.user-info-logout a:visited {
-  -webkit-box-pack: start;
-  -ms-flex-pack: start;
-  justify-content: flex-start;
+  .login-actions__container {
+    align-items: center;
+    bottom: 18%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    left: 0;
+    position: absolute;
+    width: 100%;
+
+    >div {
+      &:first-child {
+        margin-bottom: 25px;
+      }
+
+      &:nth-child(2) {
+        align-items: center;
+        color: $sapphire-white;
+        display: flex;
+        font-size: $font-size-heading3;
+
+        >div:first-child {
+          margin-right: 5px;
+        }
+
+      }
+    }
+  }
+
+  .login-button {
+    bottom: 0;
+    left: 0;
+    padding-bottom: 15px;
+    position: absolute;
+    text-align: center;
+  }
+
 }
