Background-green_S  and form-inputs

--- a/src/components/05-components/SapphireCare_Patterns/_index.scss
+++ b/src/components/05-components/SapphireCare_Patterns/_index.scss
@@ -1,4 +1,5 @@
 @forward 'appointment-card';
+@forward 'background-green_S/';
 @forward 'bottom-bar-item';
 @forward 'calendar';
 @forward 'card-icon-text-link';
