--- a/src/components/05-components/SapphireCare_Patterns/form-input/_index.scss
+++ b/src/components/05-components/SapphireCare_Patterns/form-input/_index.scss
@@ -33,7 +33,7 @@
 
   .animated-label-input input[data-input],
   &:empty {
-    color: $regular-grey;
+    color: $dark-grey;
     font-size: $font-size-heading4;
     height: 30px;
     line-height: 20px;
@@ -46,17 +46,24 @@
 
 .animated-label {
   .animated-label-text {
-    bottom: -30px;
+    bottom: -25px;
     font-size: $font-size-heading3;
     position: relative;
     transition: font-size .5s ease;
+
   }
 
   &.active {
+
     .animated-label-text {
       bottom: 0;
+      color: $regular-grey;
       font-size: $font-size-normal;
       transition: font-size .5s ease;
     }
+
+    // .animated-label-input {
+    //   color: $dark-grey;
+    // }
   }
 }
