--- a/src/components/98-adjustments/_index.scss
+++ b/src/components/98-adjustments/_index.scss
@@ -2,12 +2,14 @@
 @forward 'appointment-request';
 @forward 'appoitmentRequest-specialties';
 @forward 'appointment-detail';
+@forward 'create-account';
 @forward 'daily-health-check';
 @forward 'detail-pages';
 @forward 'doctor-detail';
 @forward 'doctor-list';
 @forward 'exam-detail';
 @forward 'exam-list';
+@forward 'global';
 @forward 'home-page';
 @forward 'hospital-detail';
 @forward 'hospital-list';
