Login page adjust

--- a/src/components/05-components/screens/login/_index.scss
+++ b/src/components/05-components/screens/login/_index.scss
@@ -125,4 +125,12 @@
     }
   }
 
+  .animated-label {
+    &.active {
+      .animated-label-text {
+        color: $regular-white;
+      }
+    }
+  }
+
 }
