Selected card Profile and Hospital list Border

--- a/src/components/05-components/SapphireCare_Patterns/card-profile/_index.scss
+++ b/src/components/05-components/SapphireCare_Patterns/card-profile/_index.scss
@@ -10,6 +10,10 @@
 .card-profile {
   display: flex;
 
+  &.selected {
+    background-color: $regular-eta;
+  }
+
   &__image {
     margin-right: 15px;
 
