--- a/src/components/05-components/SapphireCare_Patterns/card-wizard/_index.scss
+++ b/src/components/05-components/SapphireCare_Patterns/card-wizard/_index.scss
@@ -16,6 +16,10 @@
   margin-bottom: 15px;
   padding: 25px 15px;
 
+  &.selected {
+    background-color: $regular-eta;
+  }
+
 
 
   .cardWizard__link {
