--- a/src/components/98-adjustments/_index.scss
+++ b/src/components/98-adjustments/_index.scss
@@ -2,6 +2,7 @@
 @forward 'appointment-request';
 @forward 'appoitmentRequest-specialties';
 @forward 'appointment-detail';
+@forward 'contacts';
 @forward 'create-account';
 @forward 'daily-health-check';
 @forward 'detail-pages';
