create accout fix

--- a/src/components/98-adjustments/_create-account.scss
+++ b/src/components/98-adjustments/_create-account.scss
@@ -4,6 +4,9 @@
 $mobile-input-width:75px;
 
 [id*='CreateAccount'] {
+  .section {
+    background-color: $sapphire-white;
+  }
 
   .main-content {
     background-color: $sapphire-white;
