Contact Page adjusts

--- a/src/components/05-components/SapphireCare_Patterns/card-info/_index.scss
+++ b/src/components/05-components/SapphireCare_Patterns/card-info/_index.scss
@@ -14,6 +14,10 @@
   &__label {
     color: $regular-grey;
     margin-bottom: 20px;
+
+    @media screen and (max-width:320px) {
+      margin-bottom: 5px;
+    }
   }
 
   &__container {
