--- a/src/components/05-components/SapphireCare_Patterns/card-prescription/_index.scss
+++ b/src/components/05-components/SapphireCare_Patterns/card-prescription/_index.scss
@@ -14,6 +14,10 @@ $dimensions:100px;
   padding: 15px;
   text-align: left;
 
+  @media screen and (max-width:320px) {
+    padding: 10px;
+  }
+
   .is-rtl & {
     text-align: right;
   }
