--- a/src/components/98-adjustments/_contacts.scss
+++ b/src/components/98-adjustments/_contacts.scss
@@ -66,25 +66,33 @@ $icon-size:50px;
     }
 
     .social-nedia__container {
-      align-items: center;
-      display: flex;
 
-      >div:nth-child(2) {
-        margin: 0 25px;
+      >div {
+
+        >div:nth-child(3) {
+          margin: 0 25px;
+        }
+
+        .social-media__icon {
+          align-items: center;
+          border: 2px solid $regular-alpha;
+          border-radius: 50%;
+          color: $regular-alpha;
+          display: flex;
+          float: inline-start;
+          height: $icon-size;
+          justify-content: center;
+          width: $icon-size;
+
+          .is-rtl & {
+            float: inline-end;
+          }
+
+
+        }
       }
 
-      .social-media__icon {
-        align-items: center;
-        border: 2px solid $regular-alpha;
-        border-radius: 50%;
-        color: $regular-alpha;
-        display: flex;
-        height: $icon-size;
-        justify-content: center;
-        width: $icon-size;
 
-
-      }
     }
   }
 }
