create account arabic adjust

--- a/src/components/98-adjustments/_create-account.scss
+++ b/src/components/98-adjustments/_create-account.scss
@@ -58,6 +58,11 @@ $mobile-input-width:75px;
             input[type='tel'] {
               padding-left: $mobile-input-width;
               position: relative;
+
+              .is-rtl & {
+                padding-right: $mobile-input-width;
+              }
+
               // width: calc(100% - #{$mobile-input-width});
             }
           }
