First Login and Recover Password

--- a/src/components/98-adjustments/_index.scss
+++ b/src/components/98-adjustments/_index.scss
@@ -10,6 +10,7 @@
 @forward 'doctor-list';
 @forward 'exam-detail';
 @forward 'exam-list';
+@forward 'first-login';
 @forward 'global';
 @forward 'home-page';
 @forward 'hospital-detail';
@@ -24,3 +25,4 @@
 @forward 'preferences';
 @forward 'prescription-detail';
 @forward 'profile';
+@forward 'recover-password';
