--- a/src/components/98-adjustments/_appointment-request.scss
+++ b/src/components/98-adjustments/_appointment-request.scss
@@ -95,9 +95,16 @@ $height:100px;
   }
 
   [id*='Summary__Section'] {
-    .summary__section--text {
-      color: $mid-light-grey;
+
+    [id*='Summary__TextContainer'] {
       margin-bottom: 40px;
+      margin-top: 15px;
+
+      .summary__section--text {
+        color: $mid-light-grey;
+        line-height: 20px;
+        margin-bottom: 40px;
+      }
     }
 
     .cardInfo {
@@ -115,12 +122,48 @@ $height:100px;
       }
     }
 
-    .btn {
-      align-items: center;
-      border-radius: 24px;
-      display: flex;
-      justify-content: center;
-      width: 100%;
+    .requiered-documents {
+      .title {
+        align-items: center;
+        display: flex;
+        font-size: $font-size-heading4;
+        margin-bottom: 15px;
+
+        :nth-child(2) {
+          font-family: $latin-bold;
+          margin-left: 5px;
+
+          .is-rtl & {
+            font-family: $arabic-bold;
+          }
+        }
+
+      }
+
+      .info-message {
+        color: $mid-light-grey;
+        line-height: 20px;
+        margin-bottom: 15px;
+
+      }
+
+      .list-content {
+        margin-bottom: 15px;
+
+        .content {
+          align-items: center;
+          display: flex;
+          flex-direction: row;
+
+          :first-child {
+            flex: 1;
+          }
+
+          :nth-child(-n+2) {
+            flex: 2;
+          }
+        }
+      }
     }
   }
 
