--- a/src/components/98-adjustments/_news-details.scss
+++ b/src/components/98-adjustments/_news-details.scss
@@ -7,6 +7,7 @@
 [id*='NewsDetails'] {
   .section {
     background-color: $sapphire-white;
+    height: 100%;
 
     .news-details__top-image {
       align-items: center;
