--- a/src/components/98-adjustments/_hospital-detail.scss
+++ b/src/components/98-adjustments/_hospital-detail.scss
@@ -39,6 +39,7 @@
 [id*='DoctorsSpeciality'] {
   .section {
     background-color: $sapphire-white;
+    height: 100vh;
     padding-bottom: 30px;
     padding-top: 35px;
 
