--- a/src/components/98-adjustments/_prescription-detail.scss
+++ b/src/components/98-adjustments/_prescription-detail.scss
@@ -81,6 +81,15 @@
         margin-bottom: 15px;
       }
 
+      .card-prescription {
+        @media screen and (max-width:576px) {
+          display: block;
+          font-size: $font-size-small;
+          padding: 10px;
+          word-break: break-word;
+        }
+      }
+
       .card-prescription__icon {
         font-size: 20px;
         left: -5px;
